unpackaged/objects/Claims__c.object
<CustomObject>
    <description>This object will contain all the claims data that has changed within the past year</description>
    <fields>
        <fullName>Agency__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Agency</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Large YTD Claims</relationshipLabel>
        <relationshipName>Claims</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category_Code__c</fullName>
        <label>Category Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim_ID__c</fullName>
        <description>This is the external ID for this object</description>
        <externalId>true</externalId>
        <label>Claim Number</label>
        <length>8</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Date_Last_Changed__c</fullName>
        <label>Date Last Changed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Reported__c</fullName>
        <label>Date Reported</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Loss__c</fullName>
        <label>Date of Loss</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Declaration__c</fullName>
        <label>Declaration</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insured__c</fullName>
        <label>Policyholder</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loss_Description__c</fullName>
        <label>Loss Description</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy__c</fullName>
        <label>Policy Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reserve_Status__c</fullName>
        <label>Reserve Status</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Loss_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Loss Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Out_Reserve__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Out Reserve</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Payments_Made__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Payments Made</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Weather__c</fullName>
        <label>Weather</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Week_Additional_Payments__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Week Additional Payments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Week_Net_Change__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Week Net Change</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Week_Out_Reserve_Changes__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Week Out Reserve Changes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Week_Payments_From_Reserve__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Week Payments From Reserve</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Week_Reserve_Changes__c</fullName>
        <label>Week_Reserve_Changes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTD_Additional_Payments__c</fullName>
        <label>YTD Additional Payments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTD_Net_Change__c</fullName>
        <label>YTD Net Change</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTD_Out_Reserve_Changes__c</fullName>
        <label>YTD Out Reserve Changes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTD_Payments_From_Reserve__c</fullName>
        <label>YTD Payments From Reserve</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTD_Reserve_Changes__c</fullName>
        <defaultValue>0</defaultValue>
        <label>YTD_Reserve_Changes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Claims</label>
    <nameField>
        <label>Claim</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Claims</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>